# anotaai

./: 16KB_ALIGNMENT_FIX.md  README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/schemas/br.com.rrrqueiroz.notas.data.datasource.local.database.AppDatabase/: 1.json  2.json
app/src/androidTest/java/com/alura/notas/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/br/com/rrrqueiroz/notas/: AppApplication.kt
app/src/main/java/br/com/rrrqueiroz/notas/data/mapper/: NoteMapper.kt
app/src/main/java/br/com/rrrqueiroz/notas/data/repository/: NoteRepositoryImpl.kt
app/src/main/java/br/com/rrrqueiroz/notas/di/module/: DataSourceModule.kt  DatabaseModule.kt  FileUtilsModule.kt  RepositoryModule.kt
app/src/main/java/br/com/rrrqueiroz/notas/domain/model/: BaseNote.kt  Note.kt  NoteItemAudio.kt  NoteItemChecklist.kt  NoteItemImage.kt  NoteItemText.kt
app/src/main/java/br/com/rrrqueiroz/notas/domain/repository/: NoteRepository.kt
app/src/main/java/br/com/rrrqueiroz/notas/domain/usecase/: CountNotesUseCase.kt  DeleteAllNotesUseCase.kt  DeleteItemNoteUseCase.kt  DeleteNoteUseCase.kt  GetAllNotesUseCase.kt  GetNoteUseCase.kt  (+1 more)
app/src/main/java/br/com/rrrqueiroz/notas/extensions/: BitmapExtensions.kt  IntExtensions.kt  LongExtensions.kt
app/src/main/java/br/com/rrrqueiroz/notas/presentation/: MainActivity.kt
app/src/main/java/br/com/rrrqueiroz/notas/utils/: AudioManager.kt  FileUtils.kt  PermissionUtils.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
(+46 files in other folders)
